test/extension_test_cases/valid/dynamic/dynamicmixedtypes.wacc
# structs

# Output:
# #empty#

# Exit:
# 0

# Program:

begin
  a = null ;
  b = null ;
  a = 'a' ;
  b = a ;
  int c = 7 ;
  int d = 9 ;
  e = c + d + d ;
  println e ;
  println a ;
  println b ;
  exit 0
end
